trying to fix the alignment of image

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,8 @@ ul.list{
   color:#8a181d;
 }
 .photos{
-  align-items: center;
+  align-self: center;
+  margin: auto;
 }
 img{
   width: 150px;
